--- a/.github/workflows/ChemName2CID.yml
+++ b/.github/workflows/ChemName2CID.yml
@@ -32,6 +32,7 @@ jobs:
          export PATH="$PATH:/home/runner/.local/bin:/home/runner/Fechii-Application-Chemical-Engineer/Fechii-Application-Chemical-Engineer/doc/"
          pip3 install --upgrade pip
          pip3 install wheel
+         python3.6 -m pip install -U pymupdf
          python3.6 ChemName2CID.py
          cd ChemName2CID/
          ls -lt
