--- a/.github/workflows/ChemName2CID.yml
+++ b/.github/workflows/ChemName2CID.yml
@@ -32,8 +32,8 @@ jobs:
          export PATH="$PATH:/home/runner/.local/bin:/home/runner/Fechii-Application-Chemical-Engineer/Fechii-Application-Chemical-Engineer/doc/"
          pip3 install --upgrade pip
          pip3 install wheel
-         /usr/lib/python3 -m pip install -U pymupdf
-         /usr/lib/python3 ChemName2CID.py
+         python3.6 -m pip install -U pymupdf
+         python3.6 ChemName2CID.py
          cd ChemName2CID/
          ls -lt
 
