--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,8 +7,10 @@ version: 2
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
+  builder: html
   configuration: doc/conf.py
-
+  fail_on_warning: true
+  
 # Build documentation with MkDocs
 #mkdocs:
 #  configuration: mkdocs.yml
