--- a/.github/workflows/image_converter.yml
+++ b/.github/workflows/image_converter.yml
@@ -1,44 +1,44 @@
-name: images downloader
-
-on:
-  push:
-    branches:
-      - master
-
-jobs:
-  build_docs_and_deploy:
-    runs-on: ubuntu-latest
-    name: build up document and deploy
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@master
-
-    - name: Clone pre repositories
-      run: |
-        ls
-        echo '------------------------------'
-        git config --global user.email "ucecwme@ucl.ac.uk"
-        git config --global user.name "nickcafferry"
-        git init
-        cd ./doc/assets/GC_LC/images/GC_LC_Demo/
-        
-        ls
-        echo '============================================'
-        export PATH="$PATH:/home/runner/.local/bin:/home/runner/Fechii-Application-Chemical-Engineer/Fechii-Application-Chemical-Engineer/doc/assets/GC_LC/images/GC_LC_Demo"
-        pip3 install pillow
-        pip3 install --upgrade pip
-        pip3 install wheel
-        python3 -m pip install -U pymupdf
-        ls -lt
-        echo "--------------------------------------------"
-        
-        python3 test.py
-        git add -A
-        git commit -m "transforming a book into pngs"
-        echo "Transform pdf into pics"
-        ls -lt
-        
-        cd ../../../../../
-        ls
-        git push origin master 
+#name: images downloader
+#
+#on:
+#  push:
+#    branches:
+#      - master
+#
+#jobs:
+#  build_docs_and_deploy:
+#    runs-on: ubuntu-latest
+#    name: build up document and deploy
+#
+#    steps:
+#    - name: Checkout
+#      uses: actions/checkout@master
+#
+#    - name: Clone pre repositories
+#      run: |
+#        ls
+#        echo '------------------------------'
+#        git config --global user.email "ucecwme@ucl.ac.uk"
+#        git config --global user.name "nickcafferry"
+#        git init
+#        cd ./doc/assets/GC_LC/images/GC_LC_Demo/
+#        
+#        ls
+#        echo '============================================'
+#        export PATH="$PATH:/home/runner/.local/bin:/home/runner/Fechii-Application-Chemical-Engineer/Fechii-Application-Chemical-Engineer/doc/assets/GC_LC/images/GC_LC_Demo"
+#        pip3 install pillow
+#        pip3 install --upgrade pip
+#        pip3 install wheel
+#        python3 -m pip install -U pymupdf
+#        ls -lt
+#        echo "--------------------------------------------"
+#        
+#        python3 test.py
+#        git add -A
+#        git commit -m "transforming a book into pngs"
+#        echo "Transform pdf into pics"
+#        ls -lt
+#        
+#        cd ../../../../../
+#        ls
+#        git push origin master 
