--- a/.github/workflows/FA13008.yml
+++ b/.github/workflows/FA13008.yml
@@ -39,6 +39,7 @@ jobs:
          pip3 install --upgrade pip
          pip3 install wheel
          python3.8 -m pip install -U pymupdf
+         python3.8 -m pip install xlrd
          python3.8 CAS_Correction.py
          ls
 
